# nicp

./: CMakeLists.txt  package.xml
launch/: nicp.launch
nicp/: CMakeLists.txt
nicp/nicp/: CMakeLists.txt  alignerprojective.cpp  correspondencefinderprojective.cpp  homogeneousvector4f.h  informationmatrix.h  nicp_simple_aligner.cpp
nicp/nicp_conf/: gicp_eth_kinect.conf  nicp_aligner_1_1.conf  nicp_eth_kinect.conf
nicp/nicp_ros/: nicp_ros_node.cpp
